// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertIcon renders with a primary or secondary style primary 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with a primary or secondary style secondary 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--secondary ax-alert-icon--small ax-alert-icon--info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with color error 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  color="error"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with color info 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  color="info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with color subtle 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  color="subtle"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with color success 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  color="success"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with color warning 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  color="warning"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with defaultProps 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with size large 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--large ax-alert-icon--info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "3rem",
        "width": "3rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with size medium 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--medium ax-alert-icon--info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "2rem",
        "width": "2rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`AlertIcon renders with size small 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--info"
  name="twitter"
>
  <svg
    className="ax-icon ax-icon--information"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;
